tests/baselines/reference/implementedPropertyContextualTyping1.errors.txt
tests/cases/conformance/expressions/contextualTyping/implementedPropertyContextualTyping1.ts(20,3): error TS2322: Type 'number' is not assignable to type 'string'.
tests/cases/conformance/expressions/contextualTyping/implementedPropertyContextualTyping1.ts(23,3): error TS2322: Type 'number' is not assignable to type 'string'.
tests/cases/conformance/expressions/contextualTyping/implementedPropertyContextualTyping1.ts(27,3): error TS2322: Type 'number' is not assignable to type 'string'.
tests/cases/conformance/expressions/contextualTyping/implementedPropertyContextualTyping1.ts(30,3): error TS2322: Type 'number' is not assignable to type 'string'.


==== tests/cases/conformance/expressions/contextualTyping/implementedPropertyContextualTyping1.ts (4 errors) ====
    interface Event {
    	time: number;
    }
    interface Base {
    	superHandle: (e: Event) => number;
    }
    interface Listener extends Base {
    	handle: (e: Event) => void;
    }
    interface Ringer {
    	ring: (times: number) => void;
    }
    abstract class Watcher {
    	abstract watch(e: Event): number;
    }
    
    class Alarm extends Watcher implements Listener, Ringer {
    	str: string;
    	handle = e => {
    		this.str = e.time; // error
    		~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    	}
    	superHandle = e => {
    		this.str = e.time; // error
    		~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    		return e.time;
    	}
    	ring(times) {
    		this.str = times; // error
    		~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    	}
    	watch(e) {
    		this.str = e.time; // error
    		~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    		return e.time;
    	}
    }